examples and offsets

--- a/examples/demo2.html
+++ b/examples/demo2.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		        
-		<title>Grid 12x17</title>
+		<title>Viewport grid - demo2</title>
 		
          <link rel="stylesheet" type="text/css" href="../styles/viewport-grid.css" />
          <link rel="stylesheet" type="text/css" href="styles/demo2.css" />
@@ -13,33 +13,49 @@
 	<body>
 	
 	<div class='grid-column grid-gutters'>
+	   <div class='h-2'>
+	       <div class='grid-row grid-gutters'>
+	           <div class='w-12'>
+    	           <h1>Grids with gutters</h1>
+	           </div>
+	       </div>
+	   </div>
        <div class='h-5'>
            <div class='grid-row grid-gutters'>
                <div class='w-6'>
-                   <div class='demo demo-dark'></div>
+                   <div class='demo demo-dark'>h-5 / w-6</div>
                </div>
                <div class='w-6'>
-                   <div class='demo'></div>
+                   <div class='demo'>h-5 / w-6</div>
                </div>
            </div>
        </div>
        <div class='h-5'>
            <div class='grid-row grid-gutters'>
-               <div class='w-6'>
-                   <div class='demo'></div>
+               <div class='w-4'>
+                   <div class='demo'>h-5 / w-4</div>
                </div>
-               <div class='w-6'>
-                   <div class='demo demo-dark'></div>
+               <div class='w-4'>
+                   <div class='demo demo-dark'>h-5 / w-4</div>
+               </div>
+               <div class='w-4'>
+                   <div class='demo'>h-5 / w-4</div>
                </div>
            </div>
        </div>
        <div class='h-5'>
            <div class='grid-row grid-gutters'>
-               <div class='w-6'>
-                   <div class='demo demo-dark'></div>
+               <div class='w-3'>
+                   <div class='demo demo-dark'>h-5 / w-3</div>
                </div>
-               <div class='w-6'>
-                   <div class='demo'></div>
+               <div class='w-3'>
+                   <div class='demo'>h-5 / w-3</div>
+               </div>
+               <div class='w-3'>
+                   <div class='demo demo-dark'>h-5 / w-3</div>
+               </div>
+               <div class='w-3'>
+                   <div class='demo'>h-5 / w-3</div>
                </div>
            </div>
        </div>
