--- a/examples/demo1.html
+++ b/examples/demo1.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		        
-		<title>Grid 12x17</title>
+		<title>Viewport grid - demo1</title>
 		
          <link rel="stylesheet" type="text/css" href="../styles/viewport-grid.css" />
          <link rel="stylesheet" type="text/css" href="styles/demo1.css" />
