--- a/examples/demo2.html
+++ b/examples/demo2.html
@@ -12,50 +12,50 @@
 	</head>
 	<body>
 	
-	<div class='grid-column grid-gutters'>
-	   <div class='h-2'>
-	       <div class='grid-row grid-gutters'>
-	           <div class='w-12'>
+	<div class='rows with-gutters'>
+	   <div class='row-2'>
+	       <div class='columns with-gutters'>
+	           <div class='col-12'>
     	           <h1>Grids with gutters</h1>
 	           </div>
 	       </div>
 	   </div>
-       <div class='h-5'>
-           <div class='grid-row grid-gutters'>
-               <div class='w-6'>
-                   <div class='demo demo-dark'>h-5 / w-6</div>
+       <div class='row-5'>
+           <div class='columns with-gutters'>
+               <div class='col-6'>
+                   <div class='demo demo-dark'>row-5 / col-6</div>
                </div>
-               <div class='w-6'>
-                   <div class='demo'>h-5 / w-6</div>
-               </div>
-           </div>
-       </div>
-       <div class='h-5'>
-           <div class='grid-row grid-gutters'>
-               <div class='w-4'>
-                   <div class='demo'>h-5 / w-4</div>
-               </div>
-               <div class='w-4'>
-                   <div class='demo demo-dark'>h-5 / w-4</div>
-               </div>
-               <div class='w-4'>
-                   <div class='demo'>h-5 / w-4</div>
+               <div class='col-6'>
+                   <div class='demo'>row-5 / col-6</div>
                </div>
            </div>
        </div>
-       <div class='h-5'>
-           <div class='grid-row grid-gutters'>
-               <div class='w-3'>
-                   <div class='demo demo-dark'>h-5 / w-3</div>
+       <div class='row-5'>
+           <div class='columns with-gutters'>
+               <div class='col-4'>
+                   <div class='demo'>row-5 / col-4</div>
                </div>
-               <div class='w-3'>
-                   <div class='demo'>h-5 / w-3</div>
+               <div class='col-4'>
+                   <div class='demo demo-dark'>row-5 / col-4</div>
                </div>
-               <div class='w-3'>
-                   <div class='demo demo-dark'>h-5 / w-3</div>
+               <div class='col-4'>
+                   <div class='demo'>row-5 / col-4</div>
                </div>
-               <div class='w-3'>
-                   <div class='demo'>h-5 / w-3</div>
+           </div>
+       </div>
+       <div class='row-5'>
+           <div class='columns with-gutters'>
+               <div class='col-3'>
+                   <div class='demo demo-dark'>row-5 / col-3</div>
+               </div>
+               <div class='col-3'>
+                   <div class='demo'>row-5 / col-3</div>
+               </div>
+               <div class='col-3'>
+                   <div class='demo demo-dark'>row-5 / col-3</div>
+               </div>
+               <div class='col-3'>
+                   <div class='demo'>row-5 / col-3</div>
                </div>
            </div>
        </div>
