--- a/examples/demo3.html
+++ b/examples/demo3.html
@@ -12,162 +12,162 @@
 	</head>
 	<body>
 	
-	<div class='grid-column grid-gutters'>
-	   <div class='h-2'>
-	       <div class='grid-row grid-gutters'>
-	           <div class='w-12'>
+	<div class='rows with-gutters'>
+	   <div class='row-2'>
+	       <div class='columns with-gutters'>
+	           <div class='col-12'>
     	           <h1>Grids with gutters</h1>
 	           </div>
 	       </div>
 	   </div>
-	   <div class='grid-row grid-gutters'>
-	       <div class='w-1'>
-	           <div class='grid-column grid-gutters'>
-	               <div class='h-14'>
-	                   <div class='demo'>h-14</div>
+	   <div class='columns with-gutters'>
+	       <div class='col-1'>
+	           <div class='rows with-gutters'>
+	               <div class='row-14'>
+	                   <div class='demo'>row-<br />14</div>
 	               </div>
-                   <div class='h-1'>
+                   <div class='row-1'>
                        <div class='demo'></div>
                    </div>
 	           </div>
 	       </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-13'>
-                       <div class='demo'>h-13</div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-13'>
+                       <div class='demo'>row-<br />13</div>
                    </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
                    </div>
                </div>
            </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-12'>
-                       <div class='demo'>h-12</div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-12'>
+                       <div class='demo'>row-<br />12</div>
                    </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
                    </div>
-                   <div class='h-1'>
+                   <div class='row-1'>
                        <div class='demo'></div>
                    </div>
                </div>
            </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-11'>
-                       <div class='demo'>h-11</div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-11'>
+                       <div class='demo'>row-<br />11</div>
                    </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
                    </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
-                   </div>
-               </div>
-           </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-10'>
-                       <div class='demo'>h-10</div>
-                   </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
-                   </div>
-                   <div class='h-3'>
-                       <div class='demo'>h-3</div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
                    </div>
                </div>
            </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-9'>
-                       <div class='demo'>h-9</div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-10'>
+                       <div class='demo'>row-<br />10</div>
                    </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
                    </div>
-                   <div class='h-4'>
-                       <div class='demo'>h-4</div>
-                   </div>
-               </div>
-           </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-8'>
-                       <div class='demo'>h-8</div>
-                   </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
-                   </div>
-                   <div class='h-5'>
-                       <div class='demo'>h-5</div>
+                   <div class='row-3'>
+                       <div class='demo'>row-<br />3</div>
                    </div>
                </div>
            </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-7'>
-                       <div class='demo'>h-7</div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-9'>
+                       <div class='demo'>row-<br />9</div>
                    </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
                    </div>
-                   <div class='h-6'>
-                       <div class='demo'>h-6</div>
-                   </div>
-               </div>
-           </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-6'>
-                       <div class='demo'>h-6</div>
-                   </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
-                   </div>
-                   <div class='h-7'>
-                       <div class='demo'>h-7</div>
+                   <div class='row-4'>
+                       <div class='demo'>row-<br />4</div>
                    </div>
                </div>
            </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-5'>
-                       <div class='demo'>h-5</div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-8'>
+                       <div class='demo'>row-<br />8</div>
                    </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
                    </div>
-                   <div class='h-8'>
-                       <div class='demo'>h-8</div>
-                   </div>
-               </div>
-           </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-4'>
-                       <div class='demo'>h-4</div>
-                   </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
-                   </div>
-                   <div class='h-9'>
-                       <div class='demo'>h-9</div>
+                   <div class='row-5'>
+                       <div class='demo'>row-<br />5</div>
                    </div>
                </div>
            </div>
-           <div class='w-1'>
-               <div class='grid-column grid-gutters'>
-                   <div class='h-3'>
-                       <div class='demo'>h-3</div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-7'>
+                       <div class='demo'>row-<br />7</div>
                    </div>
-                   <div class='h-2'>
-                       <div class='demo'>h-2</div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
                    </div>
-                   <div class='h-10'>
-                       <div class='demo'>h-12</div>
+                   <div class='row-6'>
+                       <div class='demo'>row-<br />6</div>
+                   </div>
+               </div>
+           </div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-6'>
+                       <div class='demo'>row-<br />6</div>
+                   </div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
+                   </div>
+                   <div class='row-7'>
+                       <div class='demo'>row-<br />7</div>
+                   </div>
+               </div>
+           </div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-5'>
+                       <div class='demo'>row-<br />5</div>
+                   </div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
+                   </div>
+                   <div class='row-8'>
+                       <div class='demo'>row-<br />8</div>
+                   </div>
+               </div>
+           </div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-4'>
+                       <div class='demo'>row-<br />4</div>
+                   </div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
+                   </div>
+                   <div class='row-9'>
+                       <div class='demo'>row-<br />9</div>
+                   </div>
+               </div>
+           </div>
+           <div class='col-1'>
+               <div class='rows with-gutters'>
+                   <div class='row-3'>
+                       <div class='demo'>row-<br />3</div>
+                   </div>
+                   <div class='row-2'>
+                       <div class='demo'>row-<br />2</div>
+                   </div>
+                   <div class='row-10'>
+                       <div class='demo'>row-<br />12</div>
                    </div>
                </div>
            </div>
