--- a/examples/demo4.html
+++ b/examples/demo4.html
@@ -12,10 +12,10 @@
 	</head>
 	<body>
 	
-	<div class='grid-column grid-gutters'>
-	   <div class='h-9 h-4-offset'>
-	       <div class='grid-row grid-gutters'>
-	           <div class='w-4 w-4-offset'>
+	<div class='rows with-gutters'>
+	   <div class='row-9 row-4-offset'>
+	       <div class='columns with-gutters'>
+	           <div class='col-4 col-4-offset'>
 	               <div class='demo'>
         	           <h1>Offsets</h1>
 	               </div>
